--- a/nginx/appseed-app.conf
+++ b/nginx/appseed-app.conf
@@ -1,15 +1,10 @@
-upstream webapp {
-    server appseed_app:5005;
-}
-
 server {
-    listen 5085;
-    server_name localhost;
+    listen 80;
+    server_name blue-bear.hr;
 
-    location / {
-        proxy_pass http://webapp;
-        proxy_set_header Host $host:$server_port;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
+    # Tell Nginx and Passenger where your app's 'public' directory is
+    root /var/www/myapp/code/public;
 
+    # Turn on Passenger
+    passenger_enabled on;
 }
