--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ FLASK_ENV=development
 ASSETS_ROOT=/static/assets
 
 # If DB credentials (if NOT provided, or wrong values SQLite is used) 
-# DB_ENGINE=mysql
-# DB_HOST=localhost
-# DB_NAME=appseed_db
-# DB_USERNAME=appseed_db_usr
-# DB_PASS=pass
-# DB_PORT=3306
+ DB_ENGINE=mysql
+ DB_HOST=dance-tournaments.net
+ DB_NAME=dancetournaments_flask_base
+ DB_USERNAME=dancetournaments_flask_user
+ DB_PASS=g$xij.nmimT4
+ DB_PORT=3306
